# pydantic-json-schema-gen

./: LICENSE  README.md  generated_data.json  generated_schemas.json  pyproject.toml  run.sh
src/pydantic_sample/: main.py  model.py
