[project]
name = "pydantic-sample"
version = "0.1.0"
description = "A generic tool to generate JSON Schema from Pydantic models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
gen = "pydantic_sample.main:main"
